# dynamodb-not-orm

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: tests.yml
dynamodb_not_orm/: __init__.py  commands.py  contextmanagers.py  crud.py  data.py  not_orm_cli.py
tests/: test_crud.py  test_data.py
