[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynamodb-not-orm"
version = "0.1.2"
description = "A lightweight DynamoDB ORM alternative"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Timophey Akulich", email = "tima.akulich@gmail.com" },
]
keywords = [
    "dynamodb",
    "aws",
    "orm",
    "nosql",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiodynamo[httpx]==24.7",
    "typer",
    "asyncer",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
not-orm = "dynamodb_not_orm.not_orm_cli:app"

[project.urls]
Homepage = "https://github.com/timaakulich/dynamodb-not-orm"
Repository = "https://github.com/timaakulich/dynamodb-not-orm"
Issues = "https://github.com/timaakulich/dynamodb-not-orm/issues"

[tool.hatch.build.targets.wheel]
packages = ["dynamodb_not_orm"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    ".github/",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "RUF",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["dynamodb_not_orm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
